# galapagos

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUES.md  README.md  SPECS.md  rustfmt.toml
sim-core/: Cargo.toml
sim-core/src/: error.rs  game.rs  lib.rs  prelude.rs  replicator.rs  rng.rs  shares.rs  types.rs  wellmixed.rs
sim-core/tests/: hawk_dove_convergence.rs  replicator_equilibrium.rs
web/: CLAUDE.md  DECISIONS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.ts  main.tsx  style.css
web/src/app/: App.module.css  App.tsx  Hub.module.css  Hub.tsx  ModuleHost.module.css  ModuleHost.tsx
web/src/charts/: shareChart.ts
web/src/core/: errors.ts  history.ts  index.ts  init.ts  owned.ts  params.ts  replicator.ts  wellmixed.ts
web/src/modules/: index.ts  registry.ts
web/src/modules/hawk-dove/: HawkDoveModule.module.css  HawkDoveModule.tsx  equilibrium.ts  parameters.ts
web/src/sim/: driver.ts  timeMapping.ts
web/src/styles/: base.css  palette.ts  tokens.css
web/src/ui/: Disclosure.module.css  Disclosure.tsx  Slider.module.css  Slider.tsx
