[workspace]
members = ["sim-core"]
resolver = "2"

# Profiles must live at the workspace root; keeping them here is why
# `sim-core/Cargo.toml` no longer carries a `[profile.release]` section.
[profile.release]
opt-level = 3
lto = true

# Tests build optimised: the Issue 1 convergence run is 2000 generations of
# 1000 agents, and unoptimised that dominates the TDD loop the project runs on
# (`cargo watch -x "test -q"`). Debug assertions and overflow checks stay on.
[profile.test]
opt-level = 2
